crates/mabo-parser/tests/snapshots/parser__error@enum_named_tuple_empty.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field: () @1,\n    } @2,\n}"
input_file: crates/mabo-parser/tests/inputs/invalid/enum_named_tuple_empty.mabo
snapshot_kind: text
---
mabo::parse::enum_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseEnumError.html)

  × Failed to parse enum declaration
  ├─▶ Failed to parse fields declaration
  ├─▶ Failed to parse type definition
  ├─▶ Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/enum_named_tuple_empty.mabo:4:17]
 3 │     Two {
 4 │         field: () @1,
   ·                 ▲
   ·                 ╰── In this declaration
 5 │     } @2,
   ╰────
  help: Expected enum declaration in the form `❬B❭enum <Name> {...}❬B❭`

Error: mabo::parse::id (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseFieldsError.html)

  × Failed to parse fields declaration
  ├─▶ Failed to parse type definition
  ├─▶ Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/enum_named_tuple_empty.mabo:3:9]
 2 │     One @1,
 3 │     Two {
   ·         ▲
   ·         ╰── In this declaration
 4 │         field: () @1,
   ╰────
  help: Expected fields declaration in the form `❬B❭{ <named>, <named>, ... }❬B❭`, `❬B❭( <unnamed>, <unnamed>, ... )
        ❬B❭` or `❬B❭_nothing_❬B❭`

Error: mabo::parse::type_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseTypeError.html)

  × Failed to parse type definition
  ├─▶ Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/enum_named_tuple_empty.mabo:4:16]
 3 │     Two {
 4 │         field: () @1,
   ·                ┬
   ·                ╰── In this declaration
 5 │     } @2,
   ╰────
  help: Expected type definition in the form `❬B❭<Name>❬B❭`

Error: mabo::parse::type_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseTypeError.html)

  × Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/enum_named_tuple_empty.mabo:4:17]
 3 │     Two {
 4 │         field: () @1,
   ·                 ▲
   ·                 ╰── In this declaration
 5 │     } @2,
   ╰────
  help: Expected type definition in the form `❬B❭<Name>❬B❭`

Error: 
  × error Verify
